Day 3/fortune.yaml

---
kind: Deployment
apiVersion: apps/v1

metadata:
    name: fortune-deploy
    namespace: myns
    labels:
        app: fortune-deploy

spec:
    replicas: 2
    selector:
        matchLabels:
            app: fortune-pod
    template:
        metadata:
            name: fortune-pod
            labels:
                app: fortune-pod
                version: v1
        spec:
            containers:
            - name: myapp
              image: stackupiss/fortune:v1
              imagePullPolicy: Always
              ports:
              - name: fortune-port
                containerPort: 3000

---
kind: Service
apiVersion: v1

metadata:
    name: fortune-svc
    namespace: myns
    labels:
        app: fortune-svc

spec:
    type: ClusterIP
    selector:
        app: fortune-pod
    ports:
    - name: fortune-svc-port
      port: 3000
      targetPort: fortune-port
